packages/beff-wasm/fixtures/errors/cannot-resolve/router.ts
export default {
  [`/hello`]: {
    get: async (): Promise<ThisDoesNotExist> => {
      return "test";
    },
  },
};
